--- a/css/style.scss
+++ b/css/style.scss
@@ -1,20 +1,41 @@
+@font-face {
+  font-family: "squ721rm";
+  src: url('squ721rm.ttf');
+}
 $font-stack: "Open Sans", helvetica, sans-serif;
+$background: url('final-fantasy-3.jpg');
 //$primary-color: #333;
 
+h1 {
+  text-align: center;
+}
+
 body {
-  font: 100% $font-stack;
+  background-image: $background;
+  background-repeat:no-repeat;
+  background-position: center top;
+  font: 100% "squ721rm";
   font-weight: 300;
   #container {
-    padding: 20px;
+    padding: 25px 100px 25px 100px;
+
     #albhed-textbox {
       float: left;
     }
+
     #english-textbox {
       float: right;
     }
+
     label {
+      padding: 5px 25px 5px 25px;
       text-align: center;
       display: block;
     }
   }
+}
+
+textarea {
+  font: 90% "squ721rm";
+  background-color: transparent;
 }
