--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,10 @@ h1 {
   text-align: center; }
 
 body {
-  background-image: url("final-fantasy-3.jpg");
-  background-repeat: no-repeat;
-  background-position: center top;
   font: 100% "squ721rm";
   font-weight: 300; }
+  body #info {
+    text-align: center; }
   body #container {
     padding: 25px 100px 25px 100px; }
     body #container #albhed-textbox {
@@ -21,6 +20,22 @@ body {
       text-align: center;
       display: block; }
 
+#background {
+  background-image: url("FFX_Logo.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 100%;
+  height: 100%;
+  filter: alpha(opacity=20);
+  opacity: 0.2;
+  position: absolute;
+  z-index: -1; }
+
 textarea {
   font: 90% "squ721rm";
-  background-color: transparent; }
+  resize: none;
+  background-color: rgba(229, 228, 226, 0.3); }
+
+textarea:focus {
+  box-shadow: 0 0 5px #51cbee;
+  border: 1px solid rgpa(81, 203, 238, 1); }
