--- a/css/style.scss
+++ b/css/style.scss
@@ -3,19 +3,19 @@
   src: url('squ721rm.ttf');
 }
 $font-stack: "Open Sans", helvetica, sans-serif;
-$background: url('final-fantasy-3.jpg');
-//$primary-color: #333;
+$background: url('FFX_Logo.jpg');
+$textbox-background: #E5E4E2;
 
 h1 {
   text-align: center;
 }
 
 body {
-  background-image: $background;
-  background-repeat:no-repeat;
-  background-position: center top;
   font: 100% "squ721rm";
   font-weight: 300;
+  #info {
+    text-align: center;
+  }
   #container {
     padding: 25px 100px 25px 100px;
 
@@ -35,7 +35,30 @@ body {
   }
 }
 
+#background {
+  background-image: $background;
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 100%;
+  height: 100%;
+  filter: alpha(opacity=20);
+  opacity: 0.2;
+  position: absolute;
+  z-index: -1;
+}
+
 textarea {
   font: 90% "squ721rm";
-  background-color: transparent;
+  resize: none;
+  background-color: rgba(229, 228, 226, 0.3);
+  // background-color: #000000;
+  // opacity: 0.1;
+  // color: #000000;
+}
+
+textarea:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  // padding: 3px 0 3px 3px;
+  // margin: 5px 1px 3px 0px;
+  border: 1px solid rgpa(81, 203, 238, 1);
 }
