--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   src: url("squ721rm.ttf"); }
 h1 {
   text-align: center; }
+  h1 div {
+    display: inline;
+    background-color: #000;
+    color: #fff; }
 
 body {
   overflow: hidden;
@@ -10,18 +14,24 @@ body {
   font-weight: 300; }
   body #info {
     text-align: center;
-    padding: 10px 0px 10px 0px;
-    width: 80%;
+    width: 85%;
     height: 100%;
-    margin: 0 auto;
-    opacity: 0.8; }
+    margin: 20px auto;
+    -webkit-animation: fadein 3s;
+    /* Safari and Chrome */
+    -moz-animation: fadein 3s;
+    /* Firefox */
+    animation: fadein 3s; }
   body #container {
     padding: 25px 100px 25px 100px;
-    margin: 55px 0 0 0; }
+    margin: 55px 0 0 0;
+    font-weight: 500; }
     body #container #albhed-textbox {
-      float: left; }
+      float: left;
+      opacity: 0.7; }
     body #container #english-textbox {
-      float: right; }
+      float: right;
+      opacity: 0.7; }
     body #container label {
       padding: 5px 25px 5px 25px;
       text-align: center;
@@ -41,8 +51,35 @@ body {
 textarea {
   font: 90% "squ721rm";
   resize: none;
-  background-color: rgba(229, 228, 226, 0.3); }
+  background-color: rgba(229, 228, 226, 0.25);
+  opacity: 0.9;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px; }
 
 textarea:focus {
-  box-shadow: 0 0 5px #51cbee;
-  border: 1px solid rgpa(81, 203, 238, 1); }
+  outline: none;
+  box-shadow: inset 0 0 10px #51cbee;
+  border: 1px solid rgba(81, 203, 238, 0.5); }
+
+@keyframes fadein {
+  from {
+    opacity: 0; }
+
+  to {
+    opacity: 0.8; } }
+/* Firefox */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0; }
+
+  to {
+    opacity: 0.8; } }
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+
+  to {
+    opacity: 0.8; } }
