--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,11 @@ $textbox-background: #E5E4E2;
 
 h1 {
   text-align: center;
+  div {
+    display: inline;
+    background-color: #000;
+    color: #fff;
+  }
 }
 
 body {
@@ -16,21 +21,25 @@ body {
   font-weight: 300;
   #info {
     text-align: center;
-    padding: 10px 0px 10px 0px;
-    width: 80%;
+    width: 85%;
     height: 100%;
-    margin: 0 auto; //center a div 
-    opacity: 0.8;   
+    margin: 20px auto; //center a div 
+    -webkit-animation: fadein 3s; /* Safari and Chrome */
+    -moz-animation: fadein 3s; /* Firefox */
+    animation: fadein 3s; 
   }
   #container {
     padding: 25px 100px 25px 100px;
     margin: 55px 0 0 0;
+    font-weight: 500;
     #albhed-textbox {
       float: left;
+      opacity: 0.7;
     }
 
     #english-textbox {
       float: right;
+      opacity: 0.7;
     }
 
     label {
@@ -53,13 +62,40 @@ body {
   z-index: -1;
 }
 
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  border-radius: $radius;
+}
+
 textarea {
   font: 90% "squ721rm";
   resize: none;
-  background-color: rgba(229, 228, 226, 0.3);;
+  background-color: rgba(229, 228, 226, 0.25);
+  opacity: 0.9;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  @include border-radius(10px);
 }
 
 textarea:focus {
-  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-  border: 1px solid rgpa(81, 203, 238, 1);
+  outline: none;
+  box-shadow: inset 0 0 10px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 0.5);
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 0.8; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 0.8; }
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 0.8; }
 }
