even more css styling, move font to folder

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "squ721rm";
-  src: url("squ721rm.ttf"); }
+  src: url("font/squ721rm.ttf"); }
 h1 {
-  text-align: center; }
+  text-align: center;
+  font: 200% "Open Sans", sans-serif;
+  font-weight: 700;
+  color: black; }
   h1 div {
     display: inline;
-    background-color: #000;
-    color: #fff; }
+    background-color: black;
+    color: white; }
 
 body {
+  font: #555;
   overflow: hidden;
-  font: 100% "squ721rm";
+  font: 100% "squ721rm", "Open Sans", helvetica, sans-serif;
   font-weight: 300; }
   body #info {
     text-align: center;
@@ -36,6 +40,18 @@ body {
       padding: 5px 25px 5px 25px;
       text-align: center;
       display: block; }
+  body #footer {
+    font-size: 80%;
+    position: fixed;
+    bottom: 0;
+    color: white;
+    background-color: black; }
+    body #footer a {
+      color: white;
+      text-decoration: none; }
+    body #footer a:hover {
+      color: white;
+      text-decoration: underline; }
 
 #background {
   background-image: url("FFX_Logo.jpg");
@@ -53,7 +69,7 @@ textarea {
   resize: none;
   background-color: rgba(229, 228, 226, 0.25);
   opacity: 0.9;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(81, 203, 238, 0.7);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px; }
@@ -61,25 +77,25 @@ textarea {
 textarea:focus {
   outline: none;
   box-shadow: inset 0 0 10px #51cbee;
-  border: 1px solid rgba(81, 203, 238, 0.5); }
+  border: 1px solid #51cbee; }
 
 @keyframes fadein {
   from {
     opacity: 0; }
 
   to {
-    opacity: 0.8; } }
+    opacity: 1; } }
 /* Firefox */
 @-moz-keyframes fadein {
   from {
     opacity: 0; }
 
   to {
-    opacity: 0.8; } }
+    opacity: 1; } }
 /* Safari and Chrome */
 @-webkit-keyframes fadein {
   from {
     opacity: 0; }
 
   to {
-    opacity: 0.8; } }
+    opacity: 1; } }
